# suggests

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
scripts/: demo.py
suggests/: __init__.py  logger.py  nets.py  parsing.py  suggests.py  utils.py
tests/: conftest.py  test_integration.py  test_nets.py  test_parsing.py  test_suggests.py
tests/fixtures/: abortion-20260312-122801-edges.csv  abortion-20260312-122801.json
