[project]
name = "suggests"
version = "0.3.1a0"
description = "Algorithm auditing tools for search engine autocomplete"
license = "MIT"
readme = "README.md"
authors = [{ name = "Ronald E. Robertson", email = "rer@acm.org" }]
keywords = ["suggestions", "autocomplete", "google", "bing"]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pandas>=2.0",
    "numpy>=2.0",
    "beautifulsoup4>=4.11",
]

[project.urls]
homepage = "http://github.com/gitronald/suggests"

[project.scripts]
demo = 'scripts.demo:main'

[dependency-groups]
dev = [
    "pytest>=6.2",
    "pytest-cov>=4.0",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
