[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = {current_version}
replace = {new_version}

[bumpversion:file:README.md]
search = {current_version}
replace = {new_version}

[bumpversion:file:suggests/__init__.py]
search = {current_version}
replace = {new_version}

